--- a/style.css
+++ b/style.css
@@ -1,167 +1,143 @@
-*{
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    margin: 0px;
-    padding: 0px;
-    color: whitesmoke;
-}
-body{
-    background: url('imagess/bg.jpg');
-    /* / background-color: rgba(35,45,57,0.8);  */
-    background-repeat: no-repeat;
-    background-size: contain;
-    max-width: fit-content;
-}
-.uppercontainer{
-    
-    min-height: 5.2em;
-    position: relative;
-    left: 3.2em;
+/* CSS RESET  */
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Baloo Bhai 2', cursive;
 }
 
-.leftcontainer{
-   
-    display: inline-block;
-    position:absolute;
-    left: 2.5em;
-    top: 1.75em;
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5% 2%;
+    background-color: rgba(0,0,0,0.125);
 }
-.leftcontainer a{
+
+header a {
     text-decoration: none;
-    text-transform: uppercase;
-    color: whitesmoke;
-    font-size: 2.1875em;
-    font-weight: 800;
-}
-.rightcontainer{
-    
-    display: inline;
-    float:right;
-    margin: 2.1em 0.12em;
-    padding:0.5em 0px
-}
-.navigationbar{
-    margin: 0px 0.18em;
-    padding: 0.125em 0.1875em;
-}
-.navigationbar li a{
-    text-decoration: none;  
-    text-transform: uppercase; 
-    color: whitesmoke;
-    font-size: 1.1875em;
-    font-weight: 600;
-}
-.navigationbar li a:hover{
-    color: #ed563b;
-}
-.navigationbar li{
-    list-style: none;
-    display: inline-block;
-    margin: -0.25em 1.81em;
-    /* padding: 0.1875em 0.0625em; */
-}
-.navigationbar .buttonhover:hover{
     color: white;
+
 }
-em{
-    color: #ed563b;
+
+header a span {
+    color: aqua;
+    font-weight: 700;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-family: 'Baloo Bhai 2', cursive;
     font-style: normal;
+    text-transform: uppercase;
 }
-.imageoverlay{
-    /* border: 2px solid yellow; */
+
+nav ul li {
     display: inline;
-    position: absolute;
-    top: 20.9375em;
-    left: 533.4375em;
-    width: 80%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    list-style: none;
 }
-.imageoverlay button a{
-    display: block;
-    margin: auto;
-    text-align: center;
-}
-.imageoverlay .button{
-    display: block;
-    margin: auto 40.5%;
-}
-.text{
-    display: inline-block;
-    /* border: 2px solid red; */
-    color:whitesmoke;
-    text-align: center;
-    margin-left: 7.25em
-    
-}
-.text h3{
+
+nav ul li a {
+    font-size: 1.25rem;
     font-weight: 600;
-    text-transform: uppercase;
-    color: beige;
-    font-size: 1.125;
-    letter-spacing: 0.03125em
+    padding: 0px 1.8rem;
+    font-family: 'Baloo Bhai 2', cursive;
 }
-.text h2{
-    font-size: 5.25em;
-    text-transform: uppercase;
-    letter-spacing: 0.0625em;
-    font-weight: 800;
+
+nav ul li a:hover {
+    color: aqua;
 }
-.button{
-    background-color: #ed563b;
-    color: whitesmoke;
-    font-weight: 500; 
-     display: inline-block; 
-     padding: 0.75em 0.25em;
+nav ul li a:active{
+    color: aqua;
 }
-.button a{
-    font-size: 1.0625em;
-    text-decoration: none;
-    color:whitesmoke;
-    font-weight: 500;
-    text-align: center;
-    display: block;
-    margin: auto;
-}
-.formcontainer{
-    border: 0.125em solid #ed563b;
-    border-radius: 0.875em;
-    display: inline-block;
-    width: 49%;
-    margin: 22.625em 22.25em;
-    padding: 1.2em;
-}
+
 .btn{
-    background-color: #ed563b;
-    padding:  0.75em 1.25em;
+    padding: 10px 10px;
     border: none;
-    border-radius: 0.1875em;
-    font-size: 0.8125em;
-    font-weight: 500;
-    display: block;
-    margin: auto;
+    color: black;
+    background-color: aqua;
+    font-weight: 700;
+    border-radius: 5px;
 }
-.formgroup input{
-    text-align: center;
-    display: block;
-    color: #ed563b;
-    margin:1em auto;
-    padding:0.125em 0.125em;
-    width:74%;
-    font-size: 1.0625em;
-    border-radius: 0.4375em;
-    font-weight: 900;
+header button:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+
 }
-.formcontainer h1{
-    text-align: center;
+
+section{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid red; */
+    height: 33rem;
+    justify-content: center;
+    align-items: center;
+    /* background-color: black; */
+    margin: 0rem 10rem;
+    padding: 0rem 2rem;
 }
-form{
+section h2{
+    
+    font-size: 3.5rem;
+    font-weight: 800;
+    line-height: 1em;
+    text-align: center;
+    color: aqua;
+    font-family: 'Noto Sans', sans-serif;
+    margin-bottom:2rem;
+    letter-spacing: -2px;
+
+}
+section p{
+    text-align: center;
+    color: whitesmoke;
+    font-family: 'Baloo Bhai 2', cursive;
+    font-size: 17px;
+    font-weight: 600;
+    margin-bottom: 2rem;
+}
+body{
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color:white;
+}
+header::before{
+    content: "";
+    background: url('background image.jpg') no-repeat center center/cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    opacity: 0.4;
+}
+section button{
+    font-weight: 600;
+    /* border-radius: 5px; */
+    border-width: 2px 2px 2px 2px;
+
+    background-color: #0de8e400;
+    text-transform: uppercase;
+    font-size: 15px;
+    color: aqua;
+    padding: 9px 11px;
+    border:  1px solid aqua;
+    font-family: 'Baloo Bhai 2', cursive;
+}
+section button:hover{
+    background-color: aqua;
+    color: black;
+    cursor: pointer;
+    transform: scale(1.07);
+}
+.firstcontainer{
     position: relative;
-    top: 1em;
+    display: flex;
+    flex-direction: row;
+    border:2px solid red
 }
-.btn a{
-    text-decoration: none;
-    font-weight: 500;
+figure img{
+    width:100% ;
+    height: 20px;
 }
